--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,11 @@ set(CMAKE_CXX_STANDARD 11)
 #set(SOURCE_FILES Arrays.cpp)
 #set(SOURCE_FILES multiDarray.cpp)
 #set(SOURCE_FILES funcArray.cpp)
-set(SOURCE_FILES structArray.cpp)
+#set(SOURCE_FILES structArray.cpp)
+#set(SOURCE_FILES arrayAsclassMember.cpp)
+#set(SOURCE_FILES arrayChar.cpp)
+#set(SOURCE_FILES copyString.cpp)
+#set(SOURCE_FILES string1.cpp)
+set(SOURCE_FILES inputOutputString.cpp)
+
 add_executable(OctoberThird ${SOURCE_FILES})
